# api/dto/camera/camera.dto.js
@@ -2,11 +2,13 @@ module.exports = {
   infoCreate: obj => {
     return {
       name: obj.name,
-      namespace: obj.namespace,
+      // namespace: obj.namespace,
       resolution: obj.resolution,
       fileOutput: obj.fileOutput,
       uri: obj.uri,
-      location: obj.location
+      location: obj.location,
+      status: obj.status,
+      description: obj.description
     };
   },
 
@@ -14,11 +16,13 @@ module.exports = {
     return {
       id: obj.id,
       name: obj.name,
-      namespace: obj.namespace,
+      // namespace: obj.namespace,
       resolution: obj.resolution,
       fileOutput: obj.fileOutput,
       uri: obj.uri,
-      location: obj.location
+      location: obj.location,
+      status: obj.status,
+      description: obj.description
     };
   },
 
@@ -31,6 +35,8 @@ module.exports = {
       fileOutput: obj.fileOutput,
       uri: obj.uri,
       location: obj.location,
+      status: obj.status,
+      description: obj.description,
       videos: obj.video,
       created_at: obj.created_at,
       updated_at: obj.created_at
